;;
;; Deovi client package
;;
[metadata]
name = deovi
version = 0.3.0-pre
description = Utility to rename files and collect their filepaths
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/deovi
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    click>=8.0
    colorama
    colorlog
    python-slugify[unidecode]
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    sphinx
    sphinx-rtd-theme
    livereload
    twine
    tox

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    deovi = deovi.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{36,37,38,39}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
